--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
       <section id="banner">
         <div class="content">
           <header>
-            <h2>The future has landed</h2>
-            <p>
-              And there are no hoverboards or flying cars.<br />
-              Just apps. Lots of mother flipping apps.
-            </p>
+            <h2>Zaviar Brown</h2>
+            <p>Software Engineer</p>
           </header>
-          <span class="image"><img src="images/pic01.jpg" alt="" /></span>
+          <span class="image"><img src="images/me.jpeg" alt="" /></span>
         </div>
         <a href="#one" class="goto-next scrolly">Next</a>
       </section>
@@ -44,28 +41,21 @@
             <div class="row">
               <div class="col-4 col-12-medium">
                 <header>
-                  <h2>Odio faucibus ipsum integer consequat</h2>
-                  <p>
-                    Nascetur eu nibh vestibulum amet gravida nascetur praesent
-                  </p>
+                  <h2>About me</h2>
+                  <p>Aspiring surgeon turned Full-Stack Developer</p>
                 </header>
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-                  Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-                  nisi praesent dolor adipiscing. Integer mi sed nascetur cep
-                  aliquet augue varius tempus lobortis porttitor accumsan
-                  consequat adipiscing lorem dolor.
+                  Love going to Japan, planning on retiring there. Love to play
+                  games, Praise The Sun
                 </p>
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Morbi enim nascetur et placerat lorem sed iaculis neque ante
-                  adipiscing adipiscing metus massa. Blandit orci porttitor
-                  semper. Arcu phasellus tortor enim mi mi nisi praesent
-                  adipiscing. Integer mi sed nascetur cep aliquet augue varius
-                  tempus. Feugiat lorem ipsum dolor nullam.
+                  Love playing music, need to bust out my saxophone more. Love
+                  to teach, love to learn, love to create. Love to interact with
+                  people, love being part of a team. Huge extrovert.
                 </p>
               </div>
             </div>
@@ -81,17 +71,21 @@
         /></span>
         <div class="content">
           <header>
-            <h2>Interdum amet non magna accumsan</h2>
-            <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+            <h2>Nitro Code</h2>
+            <p>Speed typing website to help devs reach maximum coding speed</p>
           </header>
-          <p>
-            Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor
-            enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep
-            aliquet augue varius tempus lobortis porttitor lorem et accumsan
-            consequat adipiscing lorem.
-          </p>
+          <p>Talk about features more here once I add to the site.</p>
           <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
+            <li>
+              <a href="https://nitrocode.herokuapp.com/" class="button"
+                >Live Site</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/ZaviarBrown/nitroCode" class="button"
+                >GitHub</a
+              >
+            </li>
           </ul>
         </div>
         <a href="#three" class="goto-next scrolly">Next</a>
@@ -104,17 +98,28 @@
         /></span>
         <div class="content">
           <header>
-            <h2>Interdum felis blandit praesent sed augue</h2>
-            <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+            <h2>spaceXchange</h2>
+            <p>Robinhood clone on a galactic scale</p>
           </header>
           <p>
-            Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor
-            enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep
-            aliquet augue varius tempus lobortis porttitor lorem et accumsan
-            consequat adipiscing lorem.
+            Live updating stock prices, historical data for each stock,
+            transaction data, dynamically rendered data charts, as well as a
+            fake stock market with prices that change in real time based on an
+            algorithm I wrote.
           </p>
           <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
+            <li>
+              <a href="https://spacexchange.herokuapp.com/" class="button"
+                >Live Site</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/ZaviarBrown/spaceXchange"
+                class="button"
+                >GitHub</a
+              >
+            </li>
           </ul>
         </div>
         <a href="#four" class="goto-next scrolly">Next</a>
