--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- Two -->
       <section id="two" class="spotlight style2 right">
         <span class="image fit main"
-          ><img src="images/pic03.jpg" alt=""
+          ><img src="images/nitrocode1.jpg" alt=""
         /></span>
         <div class="content">
           <header>
