--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <!-- Three -->
       <section id="three" class="spotlight style3 left">
         <span class="image fit main bottom"
-          ><img src="images/pic04.jpg" alt=""
+          ><img src="images/spacexchange1.jpg" alt=""
         /></span>
         <div class="content">
           <header>
