--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <div class="col-4 col-12-medium">
                 <header>
                   <h2>About me</h2>
-                  <p>Aspiring surgeon turned Full-Stack Developer</p>
+                  <p>Medical School hopeful turned Full-Stack Developer</p>
                 </header>
               </div>
               <div class="col-4 col-12-medium">
